root-sync/base/backstage/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backstage
  namespace: backstage
spec:
  hosts:
  - "backstage.alpha.phac-aspc.gc.ca"
  gateways:
  - istio-ingress/mesh-gateway
  http:
  - name: gateway-to-backstage
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backstage.backstage.svc.cluster.local
